<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dp_8"
    android:paddingEnd="@dimen/dp_16"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:paddingStart="@dimen/dp_16"
    android:layout_marginBottom="@dimen/dp_8">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/dp_8">

            <ImageView
                android:id="@+id/ivMobileImage"
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/mobile" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8">

                <TextView
                    android:id="@+id/tvMobileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@id/ivFavorite"
                    android:layout_toStartOf="@id/ivFavorite"
                    android:text="@string/mock_mobile_name"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/dp_2"
                    android:src="@drawable/ic_star_border_black" />

                <TextView
                    android:id="@+id/tvMobileDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMobileName"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/mock_mobile_description" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvMobileDescription"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/mobile_price" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tvMobileDescription"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_toEndOf="@id/tvPrice"
                    android:layout_toRightOf="@id/tvPrice"
                    android:gravity="end"
                    android:text="@string/mobile_rating" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>